[gd_scene format=3 uid="uid://cr7fpyd7pj7tj"]

[ext_resource type="Script" uid="uid://cx7n31emgw68d" path="res://scenes/tree/tree.gd" id="1_avsvi"]
[ext_resource type="PackedScene" uid="uid://ctrrj1g83rsvj" path="res://scenes/tree_piece.tscn" id="2_4ol1s"]
[ext_resource type="Texture2D" uid="uid://j4jbxittq2gx" path="res://icon.svg" id="2_vplca"]
[ext_resource type="PackedScene" uid="uid://80qpqe1v7nsh" path="res://scenes/gui/tree_gui.tscn" id="3_viusy"]

[sub_resource type="Animation" id="Animation_viusy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vplca"]
resource_name = "tree_hit"
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.099999994),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-15, 0), Vector2(15, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qd6xs"]
_data = {
&"RESET": SubResource("Animation_viusy"),
&"tree_hit": SubResource("Animation_vplca")
}

[node name="Tree" type="Node2D" unique_id=1036956066 groups=["tree"]]
script = ExtResource("1_avsvi")
tree_piece = ExtResource("2_4ol1s")
tree_piece_scene = ExtResource("2_4ol1s")

[node name="TreeSprite" type="Sprite2D" parent="." unique_id=233602494]
texture = ExtResource("2_vplca")
centered = false

[node name="TreeChoppingArea2D" type="Area2D" parent="." unique_id=287860878 groups=["trunk"]]

[node name="ChoppingCollision" type="CollisionShape2D" parent="TreeChoppingArea2D" unique_id=488317890]

[node name="HitSFX" type="AudioStreamPlayer2D" parent="." unique_id=162198466]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=594510507]
libraries/ = SubResource("AnimationLibrary_qd6xs")

[node name="TreeGUI" parent="." unique_id=157107142 instance=ExtResource("3_viusy")]
